--- a/src/docs/partials/plugins/fa6.html
+++ b/src/docs/partials/plugins/fa6.html
@@ -3,7 +3,8 @@
     <h3>Font Awesome 6</h3>
     <p>
       You can use this plugin to set the global default icons to FA6. This plugin requires the FA6 resources to be
-      loaded.
+      loaded. Note, this plugin is an example and will be obsolete when FA6 is released.
+      The picker will be updated to default to FA6 at that time.
     </p>
     <section>
       <div class='container'>
