--- a/src/docs/partials/plugins/index.html
+++ b/src/docs/partials/plugins/index.html
@@ -13,10 +13,10 @@
     </p>
     <pre>
       <code class='language-javascript'>
-export const load = (option, tdClass, tdFactory) => {
+export const load = (option, tdClasses, tdFactory) => {
   // extend the picker
   // e.g. add new tempusDominus.TempusDominus(...).someFunction()
-  tdClass.prototype.someFunction = (a, logger) => {
+  tdClasses.TempusDominus.prototype.someFunction = (a, logger) => {
     logger = logger || console.log
     logger(a);
   }
@@ -30,8 +30,8 @@ export const load = (option, tdClass, tdFactory) => {
 
   // overriding existing API
   // e.g. extend new tempusDominus.TempusDominus(...).show()
-  const oldShow = tdClass.prototype.show;
-  tdClass.prototype.show = function(a, logger) {
+  const oldShow = tdClasses.TempusDominus.prototype.show;
+  tdClasses.TempusDominus.prototype.show = function(a, logger) {
     logger = logger || console.log
     alert('from plugin');
     logger(a);
