--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -72,6 +72,7 @@
             </li>
             <li><a href='/6/plugins/fa6.html' class='d-inline-flex align-items-center rounded'>Font Awesome 6</a></li>
             <li><a href='/6/plugins/paint.html' class='d-inline-flex align-items-center rounded'>Custom classes</a></li>
+            <li><a href='/6/plugins/moment.html' class='d-inline-flex align-items-center rounded'>Momentjs</a></li>
           </ul>
         </div>
       </li>
