I spel real good

--- a/src/docs/partials/locale.html
+++ b/src/docs/partials/locale.html
@@ -82,7 +82,7 @@ tempusDominus.locale(tempusDominus.locales.ru.name);//set the default options to
 
 //picker
 const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(&#39;datetimepicker1&#39;));
-datetimepicker1.loacle(tempusDominus.locales.ru.name);
+datetimepicker1.locale(tempusDominus.locales.ru.name);
       </code>
     </pre>
   </section>
