Fixed month manipulation issue #2474

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -6,10 +6,10 @@
     <ul>
       <li>Wrote a tiny service locator/di container in an effort to make plugins better</li>
       <li>Added a momentjs plugin</li>
-      <li>Added DE, ES, IT, NL, RO locales thanks to @jcompagner<a
+      <li>Added DE, ES, IT, NL, RO locales thanks to @jcompagner <a
         href='https://github.com/Eonasdan/tempus-dominus/pull/2484'>via #2484</a>.</li>
       <li><code>toggleMeridiem</code> supports a comma separated list. <a
-        href='https://github.com/Eonasdan/tempus-dominus/pull/2399'>via #2399.</a>
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2399'>#2399.</a>
       </li>
     </ul>
     <h3>Breaking changes</h3>
@@ -21,8 +21,12 @@
     <h3>Bug fixes</h3>
     <ul>
       <li>Fixed dataset deletion issue. <a
-        href='https://github.com/Eonasdan/tempus-dominus/pull/2483'>via #2483.</a>
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2483'>#2483.</a>
       </li>
+      <li>Fixed month manipulation issue <a
+      href='https://github.com/Eonasdan/tempus-dominus/issues/2474'>#2474.</a> <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2486'>2486.</a>
+    </li>
     </ul>
     <h2>Version 6-beta3</h2>
     <h3>New</h3>
