fixed start/end of week #2473

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -7,7 +7,8 @@
       <li>Wrote a tiny service locator/di container in an effort to make plugins better</li>
       <li>Added a momentjs plugin</li>
       <li>Added DE, ES, IT, NL, RO locales thanks to @jcompagner <a
-        href='https://github.com/Eonasdan/tempus-dominus/pull/2484'>via #2484</a>.</li>
+        href='https://github.com/Eonasdan/tempus-dominus/pull/2484'>via #2484</a>.
+      </li>
       <li><code>toggleMeridiem</code> supports a comma separated list. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2399'>#2399.</a>
       </li>
@@ -15,7 +16,9 @@
     <h3>Breaking changes</h3>
     <ul>
       <li>Plugins work a little differently now. Hopefully they are a bit cleaner to work with now</li>
-      <li>Hooks have been removed. Plugins are a better way to handle this. You can look at the momentjs plugin for a guide.</li>
+      <li>Hooks have been removed. Plugins are a better way to handle this. You can look at the momentjs plugin for a
+        guide.
+      </li>
       <li>Locale loading and authoring has changed a bit as well.</li>
     </ul>
     <h3>Bug fixes</h3>
@@ -24,15 +27,19 @@
         href='https://github.com/Eonasdan/tempus-dominus/issues/2483'>#2483.</a>
       </li>
       <li>Fixed month manipulation issue <a
-      href='https://github.com/Eonasdan/tempus-dominus/issues/2474'>#2474.</a> <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2474'>#2474.</a> <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2486'>2486.</a>
-    </li>
+      </li>
+      <li>Fixed Wrong calendar rendering when startOfTheWeek <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2473'>#2473.</a>
+      </li>
     </ul>
     <h2>Version 6-beta3</h2>
     <h3>New</h3>
     <ul>
       <li>Allow to change parent container for the widget <a
-        href='https://github.com/Eonasdan/tempus-dominus/pull/2462'>via #2462</a>.</li>
+        href='https://github.com/Eonasdan/tempus-dominus/pull/2462'>via #2462</a>.
+      </li>
       <li>Moved docs to gh-pages and setup a github action to move compiled docs to that branch.</li>
     </ul>
     <h3>Bug fixes</h3>
