dark mode and minification!

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -4,6 +4,7 @@
     <h2>Version 6-beta4</h2>
     <h3>New</h3>
     <ul>
+      <li>Dark mode! The picker now has dark mode when the user's preference is dark.</li>
       <li>Wrote a tiny service locator/di container in an effort to make plugins better</li>
       <li>Added a momentjs plugin</li>
       <li>Added DE, ES, IT, NL, RO locales thanks to @jcompagner <a
@@ -32,6 +33,9 @@
       </li>
       <li>Fixed Wrong calendar rendering when startOfTheWeek <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2473'>#2473.</a>
+      </li>
+      <li>Fixed viewMode option not respected (#2466) thanks @jmolinap <a
+        href='https://github.com/Eonasdan/tempus-dominus/pull/2494'>via #2494.</a>
       </li>
     </ul>
     <h2>Version 6-beta3</h2>
