--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -33,7 +33,7 @@
         <section class="row mb-5 pb-md-4 align-items-center">
             <div class="col-md-5">
                 <div class="masthead-followup-icon d-inline-block mb-2 text-white bg-success">
-                    <i class="fas fa-parachute-box fa-2x"></i>
+                    <i class="fa-solid fa-parachute-box fa-2x"></i>
                 </div>
                 <h2 class="display-5 fw-normal">Installation</h2>
                 <p class="lead fw-normal">
@@ -49,7 +49,7 @@
         <section class="row mb-5 pb-md-4 align-items-center">
             <div class="col-md-5">
                 <div class="masthead-followup-icon d-inline-block mb-2 text-white bg-primary">
-                    <i class="fas fa-cloud fa-2x"></i>
+                    <i class="fa-solid fa-cloud fa-2x"></i>
                 </div>
                 <h2 class="display-5 fw-normal">jsDelivr</h2>
                 <p class="lead fw-normal">
@@ -87,7 +87,7 @@
                         <h4 class="row">Creative Tim</h4>
                     </div>
                     <div class="col-sm-12 col-md-3">
-                        <a href="https://www.creative-tim.com/product/material-dashboard-pro?partner=127205 " target="_blank"
+                        <a href="https://www.creative-tim.com/product/material-dashboard-pro?partner=127205" target="_blank"
                            class="affiliate-project">
                             Material Pro
                             <img src="https://s3.amazonaws.com/creativetim_bucket/products/51/original/opt_mdp_thumbnail.jpg"
@@ -95,7 +95,7 @@
                         </a>
                     </div>
                     <div class="col-sm-12 col-md-3">
-                        <a href="https://www.creative-tim.com/product/material-dashboard-pro-angular2?partner=127205 "
+                        <a href="https://www.creative-tim.com/product/material-dashboard-pro-angular2?partner=127205"
                            target="_blank" class="affiliate-project">
                             Material Pro Angular
                             <img src="https://s3.amazonaws.com/creativetim_bucket/products/55/original/opt_mdp_angular_thumbnail.jpg"
@@ -103,10 +103,10 @@
                         </a>
                     </div>
                     <div class="col-sm-12 col-md-3">
-                        <a href="https://www.creative-tim.com/product/argon-dashboard-pro?partner=127205 " target="_blank"
+                        <a href="https://www.creative-tim.com/product/argon-dashboard-pro?partner=127205" target="_blank"
                            class="affiliate-project">
                             Argon Pro
-                            <img src="https://s3.amazonaws.com/creativetim_bucket/products/137/thumb/opt_adp_thumbnail.jpg?1544778965"
+                            <img src="https://s3.amazonaws.com/creativetim_bucket/products/137/original/argon-dashboard-pro.jpg?1637855868"
                                  alt="Argon Pro" class="img-fluid">
                         </a>
                     </div>
