--- a/src/sass/tempus-dominus.scss
+++ b/src/sass/tempus-dominus.scss
@@ -1,18 +1,33 @@
+$td-light: #fff !default;
+$td-widget-background: $td-light !default;
 $td-timepicker-font-size: 1.2em !default;
 $td-active-bg: #0d6efd !default;
-$td-active-color: #fff !default;
+$td-active-color: $td-light !default;
+$td-active-border-color: $td-light;
 $td-border-radius: 999px !default;
 $td-btn-hover-bg: #e9ecef !default;
 $td-disabled-color: #6c757d !default;
 $td-alternate-color: rgba(0, 0, 0, .38) !default;
 $td-secondary-border-color: #ccc !default;
 $td-secondary-border-color-rgba: rgba(0, 0, 0, 0.2) !default;
-$td-primary-border-color: white !default;
+$td-primary-border-color: $td-light !default;
 $td-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
+$td-dow-color: rgba(0, 0, 0, .50);
 
-/*
-todo look at how bootstrap loops through their vars to make a --root section
- */
+$td-dark: #1b1b1b !default;
+$td-dark-widget-background: $td-dark !default;
+$td-dark-font-color: #e3e3e3;
+$td-dark-active-bg: #4db2ff !default;
+$td-dark-active-color: #fff !default;
+$td-dark-active-border-color: $td-dark;
+$td-dark-btn-hover-bg: rgb(35, 38, 39) !default;
+$td-dark-disabled-color: #6c757d !default;
+$td-dark-alternate-color: rgba(232, 230, 227, 0.38) !default;
+$td-dark-secondary-border-color: #ccc !default;
+$td-dark-secondary-border-color-rgba: rgba(232, 230, 227, 0.2) !default;
+$td-dark-primary-border-color: $td-dark !default;
+$td-dark-text-shadow: 0 -1px 0 rgba(232, 230, 227, 0.25) !default;
+$td-dark-dow-color: rgba(232, 230, 227, .50);
 
 .visually-hidden {
   position: absolute !important;
@@ -32,8 +47,7 @@ todo look at how bootstrap loops through their vars to make a --root section
   width: 19rem;
   border-radius: 4px;
   display: none;
-  background-color: white;
-  /*border: 1px solid black;*/
+  background-color: $td-widget-background;
   z-index: 9999;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
 
@@ -127,7 +141,6 @@ todo look at how bootstrap loops through their vars to make a --root section
 
   .toggleMeridiem {
     text-align: center;
-    /*width: 38px;*/
     height: 38px;
   }
 
@@ -177,7 +190,7 @@ todo look at how bootstrap loops through their vars to make a --root section
     grid-auto-columns: calc(100% / 7);
 
     & .dow {
-      color: rgba(0, 0, 0, .50);
+      color: $td-dow-color;
       align-items: center;
       justify-content: center;
       text-align: center;
@@ -242,13 +255,13 @@ todo look at how bootstrap loops through their vars to make a --root section
         text-shadow: $td-text-shadow;
 
         &.old,
-        &.new  {
+        &.new {
           color: $td-active-color;
         }
       }
 
       &.active.today:before {
-        border-bottom-color: #fff;
+        border-bottom-color: $td-active-border-color;
       }
 
       &.old,
@@ -286,9 +299,9 @@ todo look at how bootstrap loops through their vars to make a --root section
   }
 
   button {
-    color: #fff;
-    background-color: #0d6efd;
-    border-color: #0d6efd;
+    color: $td-active-color;
+    background-color: $td-active-bg;
+    border-color: $td-active-bg;
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
@@ -327,6 +340,86 @@ todo look at how bootstrap loops through their vars to make a --root section
       &:hover {
         background: none;
       }
+    }
+  }
+}
+
+
+@media (prefers-color-scheme: dark) {
+  .tempus-dominus-widget {
+    color: $td-dark-font-color;
+    background-color: $td-dark-widget-background;
+    
+    [data-action] {
+      &.disabled,
+      &.disabled:hover {
+        color: $td-dark-disabled-color;
+      }
+    }
+
+    .toolbar {
+      & div {
+        &:hover {
+          background: $td-dark-btn-hover-bg;
+        }
+      }
+    }
+
+    .date-container-days {
+      & .dow {
+        color: $td-dark-dow-color;
+      }
+      
+      & .cw {
+        color: $td-dark-alternate-color;
+      }
+    }
+
+    .date-container-decades, .date-container-years, .date-container-months, .date-container-days,
+    .time-container-clock, .time-container-hour, .time-container-minute, .time-container-second {
+      div:not(.no-highlight) {
+       &:hover {
+          background: $td-dark-btn-hover-bg;
+        }
+
+        &.active {
+          background-color: $td-dark-active-bg;
+          color: $td-dark-active-color;
+          text-shadow: $td-dark-text-shadow;
+
+          &.old,
+          &.new {
+            color: $td-dark-active-color;
+          }
+        }
+
+        &.active.today:before {
+          border-bottom-color: $td-dark-active-border-color;
+        }
+
+        &.old,
+        &.new {
+          color: $td-dark-alternate-color;
+        }
+
+        &.disabled,
+        &.disabled:hover {
+          color: $td-dark-disabled-color;
+        }
+
+        &.today {
+          &:before {
+            border-bottom-color: $td-dark-active-bg;
+            border-top-color: $td-dark-secondary-border-color-rgba;
+          }
+        }
+      }
+    }
+
+    button {
+      color: $td-dark-active-color;
+      background-color: $td-dark-active-bg;
+      border-color: $td-dark-active-bg;
     }
   }
 }
