input event trigger

--- a/src/docs/styles/styles.scss
+++ b/src/docs/styles/styles.scss
@@ -73,7 +73,7 @@ section h2 {
     color: $dark-font;
   }
   
-  a, .show-code {
+  a, .show-code, .nav-link {
     color: $dark-font-alt;
   }
 
@@ -116,8 +116,12 @@ section h2 {
     content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%28227, 227, 227,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
   }
 
-  .bg-light, .text-muted, .table-striped > tbody > tr:nth-of-type(odd) > * {
+  .bg-light, .text-muted, .table-striped > tbody > tr:nth-of-type(odd) > *, .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
     background-color: $dark-background-alt !important;
     color: $dark-font !important;
+  }
+
+  .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+    border-color: rgb(56, 61, 63) rgb(56, 61, 63) rgb(48, 52, 54);
   }
 }
