--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -24,6 +24,9 @@
     </ul>
     <h3>Bug fixes</h3>
     <ul>
+      <li>Fixed input change event trigger. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2401'>#2401.</a>
+      </li>
       <li>Fixed dataset deletion issue. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2483'>#2483.</a>
       </li>
