--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -24,6 +24,9 @@
     </ul>
     <h3>Bug fixes</h3>
     <ul>
+      <li>Fixed event 'hide.td' not triggered when input is empty. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2424'>#2424.</a>
+      </li>
       <li>Fixed input change event trigger. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2401'>#2401.</a>
       </li>
