--- a/src/docs/partials/examples/jquery.html
+++ b/src/docs/partials/examples/jquery.html
@@ -21,8 +21,12 @@
 
   <section>
     <h3 id='simple-setup'>Simple Setup <a class='anchorjs-link ' aria-label='Anchor' href='#simple-setup'><i
-      class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small></h3>
-
+      class='fas fa-anchor'></i></a> <small class='show-code' title='View Code'><i class='fas fa-code'></i></small>
+      <a aria-label='stackblitz' href='https://stackblitz.com/edit/tempus-dominus-v6-simple-jquery-setup?file=index.html'
+         title='Stackblitz example'>
+        <i class='fa-solid fa-bolt'></i></a>
+    </h3>
+    
     <p>
       This is the simplest setup you can have with Bootstrap and Font Awesome 5. The picker defaults to FA 5 Solid
       icons, however you can overwrite the defaults globally.
