--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -70,8 +70,8 @@
           <ul class='list-unstyled fw-normal pb-1 small'>
             <li><a href='/6/plugins/' class='d-inline-flex align-items-center rounded'>Overview</a>
             </li>
-            <li><a href='/6/plugins/fa6.html' class='d-inline-flex align-items-center rounded'>Font Awesome 6</a></li>
-            <li><a href='/6/plugins/paint.html' class='d-inline-flex align-items-center rounded'>Custom classes</a></li>
+            <li><a href='/6/plugins/fa5.html' class='d-inline-flex align-items-center rounded'>Font Awesome 5</a></li>
+            <li><a href='/6/plugins/paint.html' class='d-inline-flex align-items-center rounded'>Paint (Custom classes)</a></li>
             <li><a href='/6/plugins/moment.html' class='d-inline-flex align-items-center rounded'>Momentjs</a></li>
           </ul>
         </div>
