--- a/src/docs/partials/index.html
+++ b/src/docs/partials/index.html
@@ -11,9 +11,9 @@
     </p>
     <h3>Get involved</h3>
     <ul>
-      <li>You can check out <a href='https://jonathanpeterson.com' rel="nofollow" target='_blank'>my blog</a>.</li>
-      <li>Join <a href="https://discord.gg/BHS9jw9YPf" rel="nofollow" target='_blank'>the discord</a></li>
-      <li>Check out the <a href="https://github.com/Eonasdan/tempus-dominus/discussions" rel="nofollow" target='_blank'>discussions</a></li>
+      <li>You can check out <a href='https://jonathanpeterson.com' rel="noopener" target='_blank'>my blog</a>.</li>
+      <li>Join <a href="https://discord.gg/BHS9jw9YPf" rel="noopener nofollow" target='_blank'>the discord</a></li>
+      <li>Check out the <a href="https://github.com/Eonasdan/tempus-dominus/discussions" rel="noopener" target='_blank'>discussions</a></li>
     </ul>
   </section>
 </page-body>
