--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="col-sm-12 col-md-3">
                         <a href="https://www.creative-tim.com/product/material-dashboard-pro?partner=127205" target="_blank"
-                           class="affiliate-project">
+                           class="affiliate-project" rel="noopener">
                             Material Pro
                             <img src="https://s3.amazonaws.com/creativetim_bucket/products/51/original/opt_mdp_thumbnail.jpg"
                                  alt="Material Pro" class="img-fluid">
@@ -96,7 +96,7 @@
                     </div>
                     <div class="col-sm-12 col-md-3">
                         <a href="https://www.creative-tim.com/product/material-dashboard-pro-angular2?partner=127205"
-                           target="_blank" class="affiliate-project">
+                           target="_blank" class="affiliate-project" rel="noopener">
                             Material Pro Angular
                             <img src="https://s3.amazonaws.com/creativetim_bucket/products/55/original/opt_mdp_angular_thumbnail.jpg"
                                  alt="Material Pro Angular" class="img-fluid">
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-sm-12 col-md-3">
                         <a href="https://www.creative-tim.com/product/argon-dashboard-pro?partner=127205" target="_blank"
-                           class="affiliate-project">
+                           class="affiliate-project" rel="noopener">
                             Argon Pro
                             <img src="https://s3.amazonaws.com/creativetim_bucket/products/137/original/argon-dashboard-pro.jpg?1637855868"
                                  alt="Argon Pro" class="img-fluid">
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col-sm-12 col-md-3">
                         <a href="https://flatlogic.com/templates/light-blue-html5?ref=dg1K3bfa8w" target="_blank"
-                           class="affiliate-project">
+                           class="affiliate-project" rel="noopener">
                             Light Blue Html5
                             <img src="https://flatlogic.com/assets/templates/lb_html_full-798d1587249f7f3d65c6f8d9a11b2489daa042b4d46c377fac0573575a663f31.webp"
                                  alt="Light Blue Vue Admin" class="img-fluid">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-sm-12 col-md-3">
                         <a href="https://flatlogic.com/templates/sing-app-html5?ref=dg1K3bfa8w" target="_blank"
-                           class="affiliate-project">
+                           class="affiliate-project" rel="noopener">
                             Sing App Html5
                             <img src="https://flatlogic.com/assets/templates/sing_html5_full-94fa15f9a342fdf7256976aef8ed5ade80ef396c754781cfa764e2cc4e9e0eea.webp"
                                  alt=" Sing App Angular Node.js" class="img-fluid">
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-sm-12 col-md-3">
                         <a href="https://flatlogic.com/templates/one-bootstrap-template?ref=dg1K3bfa8w" target="_blank"
-                           class="affiliate-project">
+                           class="affiliate-project" rel="noopener">
                             Flatlogic One Bootstrap Template
                             <img src="https://flatlogic.com/assets/templates/one_bootstrap_full-afead8dd8432ed7fd0a81ad3a75aadc06d008998570c0fd78e5bbe20740812f9.webp"
                                  alt="Light Sing App Vue" class="img-fluid">
