--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -67,7 +67,7 @@
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar"
             aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fa-solid fa-bars"></i>
+      <i class="fa-solid fa-bars"  aria-hidden="true"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="bdNavbar">
@@ -99,25 +99,25 @@
       <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" href="https://github.com/Eonasdan/tempus-dominus" target="_blank" rel="noopener">
-            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-github" aria-hidden="true"></i>
             <small class="d-md-none ms-2">GitHub</small>
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" href="https://twitter.com/eonasdan" target="_blank" rel="noopener">
-            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
             <small class="d-md-none ms-2">Twitter</small>
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" href="https://discord.gg/BHS9jw9YPf" target="_blank" rel="noopener">
-            <i class="fa-brands fa-discord"></i>
+            <i class="fa-brands fa-discord" aria-hidden="true"></i>
             <small class="d-md-none ms-2">Discord</small>
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2" href="https://ko-fi.com/eonasdan" target="_blank" rel="noopener">
-            <i class="fa-solid fa-coffee"></i>
+            <i class="fa-solid fa-coffee"  aria-hidden="true"></i>
             <small class="d-md-none ms-2">Ko-fi</small>
           </a>
         </li>
@@ -131,11 +131,6 @@
 
 <nav class="bd-subnavbar py-2" aria-label="Secondary navigation">
   <div class="container-xxl d-flex align-items-md-center">
-    <!--<form class="bd-search position-relative me-auto" method='get' action='/'>
-      <input type="search" class="form-control" id="search-input" placeholder="Search..."
-             aria-label="Search docs for..." autocomplete="off">
-    </form>-->
-
     <div class="dropdown ms-3">
       <button class="btn btn-bd-light dropdown-toggle" id="bd-versions" data-bs-toggle="dropdown" aria-expanded="false"
               data-bs-display="static">
@@ -160,9 +155,8 @@
     <button class="btn bd-sidebar-toggle d-md-none py-0 px-1 ms-3 order-3 collapsed" type="button"
             data-bs-toggle="collapse" data-bs-target="#bd-docs-nav" aria-controls="bd-docs-nav" aria-expanded="false"
             aria-label="Toggle docs navigation">
-      <i class="fa-solid fa-expand-arrows-alt"></i>
-      <i class="fa-solid fa-compress-arrows-alt"></i>
-
+      <i class="fa-solid fa-expand-arrows-alt" aria-hidden="true"></i>
+      <i class="fa-solid fa-compress-arrows-alt" aria-hidden="true"></i>
     </button>
   </div>
 </nav>
@@ -200,7 +194,6 @@
           <li class="mb-2"><a href="https://github.com/Eonasdan/tempus-dominus/discussions" target="_blank" rel="noopener">Discussions</a></li>
           <li class="mb-2"><a href="https://ko-fi.com/eonasdan" target="_blank" rel="noopener">Support me on Ko-fi</a></li>
           <li class="mb-2"><a href="https://discord.gg/BHS9jw9YPf" target="_blank" rel="noopener">Discord</a></li>
-          <!--<li class="mb-2"><a href="https://stackoverflow.com/questions/tagged/bootstrap-5">Stack Overflow</a></li>-->
         </ul>
       </div>
     </div>
@@ -230,6 +223,5 @@
   });
 </script>
 <link rel="stylesheet" href="/css/carbon.css" />
-<!--<script src="https://khan.github.io/tota11y/dist/tota11y.min.js"></script>-->
 </body>
 </html>
