--- a/src/docs/templates/index.html
+++ b/src/docs/templates/index.html
@@ -19,8 +19,6 @@
                         Currently <strong>v6.0.0-beta4</strong>
                         <span class="px-1">&middot;</span>
                         <a href="https://getdatepicker.com/5-4/" class="link-secondary">v5 docs</a>
-                        <!--<span class="px-1">&middot;</span>
-                        <a href="/docs/versions/" class="link-secondary">All releases</a>-->
                     </p>
                 </div>
             </div>
@@ -33,7 +31,7 @@
         <section class="row mb-5 pb-md-4 align-items-center">
             <div class="col-md-5">
                 <div class="masthead-followup-icon d-inline-block mb-2 text-white bg-success">
-                    <i class="fa-solid fa-parachute-box fa-2x"></i>
+                    <i class="fa-solid fa-parachute-box fa-2x" aria-hidden="true"></i>
                 </div>
                 <h2 class="display-5 fw-normal">Installation</h2>
                 <p class="lead fw-normal">
@@ -49,7 +47,7 @@
         <section class="row mb-5 pb-md-4 align-items-center">
             <div class="col-md-5">
                 <div class="masthead-followup-icon d-inline-block mb-2 text-white bg-primary">
-                    <i class="fa-solid fa-cloud fa-2x"></i>
+                    <i class="fa-solid fa-cloud fa-2x" aria-hidden="true"></i>
                 </div>
                 <h2 class="display-5 fw-normal">jsDelivr</h2>
                 <p class="lead fw-normal">
