--- a/src/docs/partials/plugins/fa5.html
+++ b/src/docs/partials/plugins/fa5.html
@@ -27,7 +27,7 @@
                 data-td-target='#datetimepicker1'
                 data-td-toggle='datetimepicker'
               >
-               <span class='fa-solid fa-calendar'></span>
+               <span class='fas fa-calendar'></span>
              </span>
             </div>
           </div>
@@ -47,11 +47,11 @@ const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(
 //to set globally
 tempusDominus.extend(window.tempusDominus.plugins.fa_five);
 //or
-import {load, fa-solidixIcons} from 'tempusDominus/plugins/fa-five'
+import {load, fasixIcons} from 'tempusDominus/plugins/fa-five'
 tempusDominus.extend(load);
 
 // otherwise to set icons to an individual picker
-datetimepicker1.updateOptions({ display: icons: window.tempusDominus.plugins.fa_five.fa-solidixIcons});
+datetimepicker1.updateOptions({ display: icons: window.tempusDominus.plugins.fa_five.fasixIcons});
 //or
 datetimepicker1.updateOptions({ display: icons: faFiveIcons});
 </code>
@@ -59,6 +59,7 @@ datetimepicker1.updateOptions({ display: icons: faFiveIcons});
   </section>
   <section>
     <table class='table table-striped'>
+      <caption>FA icons</caption>
       <tr>
         <th>Option</th>
         <th>Value</th>
@@ -71,48 +72,48 @@ datetimepicker1.updateOptions({ display: icons: faFiveIcons});
       </tr>
       <tr>
         <td>time</td>
-        <td>fa-solid fa-clock</td>
-        <td><i class='fa-solid fa-clock'></i></td>
+        <td>fas fa-clock</td>
+        <td><i class="fas fa-clock" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>date</td>
-        <td>fa-solid fa-calendar</td>
-        <td><i class='fa-solid fa-calendar'></i></td>
+        <td>fas fa-calendar</td>
+        <td><i class="fas fa-calendar" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>up</td>
-        <td>fa-solid fa-arrow-up</td>
-        <td><i class='fa-solid fa-arrow-up'></i></td>
+        <td>fas fa-arrow-up</td>
+        <td><i class="fas fa-arrow-up" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>down</td>
-        <td>fa-solid fa-arrow-down</td>
-        <td><i class='fa-solid fa-arrow-down'></i></td>
+        <td>fas fa-arrow-down</td>
+        <td><i class="fas fa-arrow-down" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>previous</td>
-        <td>fa-solid fa-chevron-left</td>
-        <td><i class='fa-solid fa-chevron-left'></i></td>
+        <td>fas fa-chevron-left</td>
+        <td><i class="fas fa-chevron-left" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>next</td>
-        <td>fa-solid fa-chevron-right</td>
-        <td><i class='fa-solid fa-chevron-right'></i></td>
+        <td>fas fa-chevron-right</td>
+        <td><i class="fas fa-chevron-right" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>today</td>
-        <td>fa-solid fa-calendar-check</td>
-        <td><i class='fa-solid fa-calendar-check'></i></td>
+        <td>fas fa-calendar-check</td>
+        <td><i class="fas fa-calendar-check" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>clear</td>
-        <td>fa-solid fa-trash</td>
-        <td><i class='fa-solid fa-trash'></i></td>
+        <td>fas fa-trash</td>
+        <td><i class="fas fa-trash" aria-hidden="true"></i></td>
       </tr>
       <tr>
         <td>close</td>
-        <td>fa-solid fa-xmark</td>
-        <td><i class='fa-solid fa-xmark'></i></td>
+        <td>fas fa-xmark</td>
+        <td><i class="fas fa-xmark" aria-hidden="true"></i></td>
       </tr>
     </table>
   </section>
